# rgb2amiga

./: .gitignore  CMakeLists.txt  COPYING  README.md  Rgb2Amiga.sln
app/cli/: Rgb2Amiga.vcxproj  Rgb2Amiga.vcxproj.filters
app/cli/src/: main.cpp
lib2Amiga/: COPYING  lib2Amiga.pro  lib2Amiga.vcxproj  lib2Amiga.vcxproj.filters
lib2Amiga/include/: CAmigaImage.h  CChunkyImage.h  CError.h  CPalette.h
lib2Amiga/src/: CAmigaImage.cpp  CChunkyImage.cpp  CPalette.cpp
libamivideo/: README.md  configure.ac  release.nix
libamivideo/src/: Doxyfile  Makefile.am  libamivideo.pc.in  libamivideo.sln
libamivideo/src/libamivideo/: Makefile.am  amivideotypes.h  libamivideo.def  libamivideo.vcxproj  libamivideo.vcxproj.filters  palette.c  palette.h  screen.c  screen.h  viewportmode.c  viewportmode.h
libamivideo/tests/: Makefile.am  chunky.c
libiff/: Makefile  libiff.pro
libiff/src/libiff/: ifftypes.h  libiff.vcxproj
libiff/tests/: formdata.h
libilbm/: libilbm.pro
libilbm/src/libilbm/: interleave.h  libilbm.vcxproj
libilbm/tests/: simplepbmdata.c
scripts/: ImageMagick-config.cmake  copy_im_db_dlls.bat  copy_im_rl_dlls.bat
